# poetry2nix-examples

./: .gitignore  .venv  Containerfile  README.md  brazilian_money_format.py  example.py  flake.nix  flask_minimal_example.py  minimal_python_builtin_script.py  mkPoetryEnv.nix  nixfriday.py  oci_image  poetry2nix.nix  poetry2nixOCIImage.nix  pyproject.toml  run-tests.sh  run.sh  test_oci_image.sh
.direnv/: flake-profile-1-link
my_package/: log_revision.py
src/: minimal_python_builtin_script.py  utils.py
