[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "test-bug-drf-spectacular"
version = "0.0.1"
description = ""
authors = ["Abc"]
readme = "README.md"
packages = [{include = "**/*.py"}]

[tool.poetry.dependencies]
python = "^3.8"
drf-spectacular="0.17.*"

[tool.poetry.scripts]

# poetry config --list
[virtualenvs]
virtualenvs.create = true
virtualenvs.in-project = true
virtualenvs.path = "."