[tool.poetry]
name = "test-selenium-firefox-geckodriver"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
homepage = "https://github.com"

[tool.poetry.dependencies]
python = "3.8.7"
pandas = "^1.3.3"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
